# myResources

./: .~make笔记.doc  cmake笔记.doc
c11新特性/: c11.md
cmakeTest/t1/: CMakeLists.txt
cmakeTest/t2/: CMakeLists.txt
cmakeTest/t2/doc/: hello.txt
cmakeTest/t2/src/: CMakeLists.txt  main.c
cmakeTest/t3(副本)/: shareMain
cmakeTest/t3(副本)(副本)/: a.out  main.c
cmakeTest/t3(副本)/src/: hello.c
cmakeTest/t3/lib/: CMakeLists.txt  hello.h
李建忠c  设计模式源码和课件 (1)/: readme.txt
